# load-balancer

./: .gitignore  README.md
bench/: .benchmark..swp  README.md  benchmark.c  cleanme  makeme  monte_bench.c  runme
bench/jni/: JniBench.c  JniBench.h  JniGo.java  cleanme  libJniBench.dylib  libJniSample.dylib  makeme
bench/original/: README.md  sgefa_openmp.c
controller/: .gitignore  build.gradle  makeme  runme  settings.gradle
controller/src/main/c/: CMakeLists.txt  JniPi.c  com_jiahaowu_balancer_task_TaskBench.c  com_jiahaowu_balancer_task_TaskBench.h  com_jiahaowu_balancer_task_TaskPi.c  com_jiahaowu_balancer_task_TaskPi.h
controller/src/main/java/com/jiahaowu/balancer/: Launcher.java
controller/src/main/java/com/jiahaowu/balancer/client/: Client.java  ClientLauncher.java  ClusterClient.java  Liveness.java
controller/src/main/proto/: message.proto
doc/exp-data/: time-clients.txt  time.txt
doc/interim/: README.md
doc/interim/src/: dd_defs.tex  dllaconfig  refs.bib  s01-proposal.tex  s02-interim.tex  s03-related.tex  top.aux  top.bbl  top.blg  top.fdb_latexmk  top.fls  top.out  top.tex
doc/interim/src/figures/: algorithm_alffs.pptx  figure.eps  figure2_2.eps
server/: build.gradle
server/gradle/wrapper/: gradle-wrapper.properties
server/src/main/proto/: message.proto
src/: README.txt  cleanme  makeme  monte-carlo-v2.c  monte-carlo.c  monte-carlo_tmp.c  runme  sample.c
src/jni-example/: JniGo.java  JniSample.c  JniSample.h  JniSample.java  cleanme  libJniSample.dylib  makeme  runme
(+11 files in other folders)
